--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,27 @@
-name: Upload to GCS
+# name: Upload to GCS
 
-on:
-  push:
-    branches: [ main ]
+# on:
+#   push:
+#     branches: [ main ]
     
-jobs:
-  upload-to-gcs:
-    permissions:
-      contents: 'read'
-      id-token: 'write'
-    runs-on: ubuntu-latest
+# jobs:
+#   upload-to-gcs:
+#     permissions:
+#       contents: 'read'
+#       id-token: 'write'
+#     runs-on: ubuntu-latest
 
-    steps:
-    - uses: 'actions/checkout@v3'
+#     steps:
+#     - uses: 'actions/checkout@v3'
     
-    - id: 'auth'
-      uses: 'google-github-actions/auth@v1'
-      with:
-        project_id: silken-quasar-350808
-        service_account_key: ${{ secrets.GCP_DTC_DE_USER_KEY }}
+#     - id: 'auth'
+#       uses: 'google-github-actions/auth@v1'
+#       with:
+#         project_id: silken-quasar-350808
+#         service_account_key: ${{ secrets.GCP_DTC_DE_USER_KEY }}
 
-    - id: 'upload-folder'
-      uses: 'google-github-actions/upload-cloud-storage@v1'
-      with:
-        path: '/etl'
-        destination: 'github_data_silken-quasar-350808'
+#     - id: 'upload-folder'
+#       uses: 'google-github-actions/upload-cloud-storage@v1'
+#       with:
+#         path: '/etl'
+#         destination: 'github_data_silken-quasar-350808'
