--- a/gh_dbt/dbt_project.yml
+++ b/gh_dbt/dbt_project.yml
@@ -30,7 +30,8 @@ clean-targets: # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  staging:
-    +materialized: view
-  marts:
-    +materialized: table
+  gh_dbt:
+    staging:
+      +materialized: view
+    marts:
+      +materialized: table
